fix styles for aphorism page

--- a/static/sass/_media.sass
+++ b/static/sass/_media.sass
@@ -37,6 +37,9 @@
     margin-right: 10px
     margin-top: 20px
 
+  .aphorisms-item-body p
+    margin-right: 0
+
 @media only screen and (max-width : 768px)
 
   .more-button-aphorism
@@ -61,6 +64,7 @@
 
   h1
     text-align: center
+    padding-top: 35px
 
   .header-text
     margin-right: 50px
@@ -106,16 +110,55 @@
 
   .top-arrow
     right: calc(50% - 265px)
+    bottom: 30px
+    img
+      width: 50px
 
 @media only screen and (max-width : 560px)
   .top-arrow
     right: calc(50% - 200px)!important
+  .header
+    flex-direction: row
+    align-items: flex-start
+  h1
+    font-size: 22px
+    padding-top: 0
+  .logo
+    margin-bottom: 30px
+    margin-left: 10px
+  .hamburger
+    z-index: 100
+    margin-right: 20px
+    margin-top: 5px
+
+  .main-menu-active
+    position: absolute
+    right: 0
+    top: 80px
+    background: white
+    border-radius: 10px 0pc 0px 20px
+    ul
+      margin-top: 0
+      padding-left: 15px
+      margin-right: 6px
+      padding-bottom: 7px
+    li
+      text-align: right
+    a
+      color: #0d0b53!important
+
+  @keyframes main-menu-active
+    0%
+      margin-right: -50px
+
+    100%
+      margin-right: 0px
 
 @media only screen and (max-width : 480px)
   .top-arrow
     right: calc(50% - 150px)!important
   .h1-contacts
-    font-size: 26px
+    font-size: 18px
 
   .bg
     height: 220vh
