--- a/views/materials.hbs
+++ b/views/materials.hbs
@@ -25,8 +25,8 @@
         {{#if materialPage.headerText}}
         {{materialPage.headerText}}
         {{else}}
-        Здесь собираются разные полезные материалы и одни из самых сильных направлений, которые трансформировали меня в
-        свое время и продолжают это делать.
+        Здесь собираются разные полезные материалы и одни из самых сильных направлений, которые действительно
+        трансформируют.
         {{/if}}
       </p>
     </div>
@@ -86,7 +86,6 @@
     </div>
   </div>
   {{>footer}}
-  <a href="tg://resolve?domain=<USERNAME>">Test share Telegram</a>
 </body>
 
 </html>
