--- a/views/materials.hbs
+++ b/views/materials.hbs
@@ -77,7 +77,19 @@
             </div>
 
             <div class="aphorisms-icons">
-              <i name={{index}} id="fa-share" class="fa fa-share-alt" aria-hidden="true"></i>
+
+              <div class="share-buttons">
+                <i onclick="Share.vkontakte('http://spiritual-evolution.ru/material/{{this._id}}','Хороший Афоризм')"
+                  class="fa fa-vk" aria-hidden="true"></i>
+                <i onclick="Share.whatsapp('http://spiritual-evolution.ru/material/{{this._id}}','Хороший Афоризм')"
+                  class="fa fa-whatsapp" aria-hidden="true"></i>
+                <i onclick="Share.telegram('http://spiritual-evolution.ru/material/{{this._id}}','Хороший Афоризм')"
+                  class="fa fa-telegram" aria-hidden="true"></i>
+              </div>
+
+              <div></div>
+
+              <i id="fa-share" class="fa fa-share-alt" aria-hidden="true"></i>
             </div>
           </div>
         </div>
