--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -28,7 +28,7 @@
   </div>
 </footer>
 
-<script src="{{path}}js/scripts.min.js"></script>
+<script src="{{path}}js/common.js"></script>
 <script type="text/javascript">
   Share = {
     vkontakte: function (purl, ptitle, pimg, text) {
