--- a/views/aphorisms.hbs
+++ b/views/aphorisms.hbs
@@ -27,7 +27,7 @@
         лучшей версии тебя.
         В каждом разделе мы собираем то, что способно изменить любого, кто к этому стремится. Дать ответ на нужный
         вопрос, заставить задуматься или просто вдохновить на новый день.
-        Читай, размышляй и используй то, что тебе подойдет. Удачи!}
+        Читай, размышляй и используй то, что тебе подойдет. Удачи!
       </p>
     </div>
 
