add smoth scroll

--- a/views/aphorisms.hbs
+++ b/views/aphorisms.hbs
@@ -20,13 +20,7 @@
         открыт для нового.
         Рост счастья и состояние наполненности от простого бытия меняет даже мрачную реальность. Сама возможность Быть
         уже является большим чудом и счастьем. Постигшему эту истину раскрывается мир неограниченных возможностей.
-        Хоть на секунду притормози и пристально посмотри на того, кто задыхается в серой реальности, кто не находит
-        себя
-        в этом мире. Может, это вовсе не ты? Давай вместе попробуем заглянуть внутрь измученной оболочки, стать ближе
-        к
-        лучшей версии тебя.
-        В каждом разделе мы собираем то, что способно изменить любого, кто к этому стремится. Дать ответ на нужный
-        вопрос, заставить задуматься или просто вдохновить на новый день.
+        В каждом разделе мы собираем то, что способно изменить любого, кто к этому стремится.
         Читай, размышляй и используй то, что тебе подойдет. Удачи!
       </p>
     </div>
