--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,3 +1,8 @@
+<div  id="bazinga">Bazinga!</div>
+
+<nav data-scroll-header>
+	...
+</nav>
 <div class="header">
   <div class="logo">
     <a href="/">
@@ -14,9 +19,8 @@
   <div class="main-menu">
     <ul>
       <li><a href="/">Главная</a></li>
-      {{!-- <li><a href="/aphorisms">Афоризмы</a></li>
-      <li><a href="/affirmation">Аффирмации</a></li> --}}
       <li><a href="/materials">Материалы</a></li>
+      {{!-- <li><a href="/courses">Бесплатные курсы</a></li> --}}
       <li><a href="/contacts">Контакты</a></li>
     </ul>
   </div>
