--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,7 +1,6 @@
-<div  id="bazinga">Bazinga!</div>
-
+<div id="bazinga"></div>
 <nav data-scroll-header>
-	...
+  ...
 </nav>
 <div class="header">
   <div class="logo">
