add popUp for materials

--- a/admin-panel/src/components/materials/materials.module.sass
+++ b/admin-panel/src/components/materials/materials.module.sass
@@ -13,3 +13,20 @@
   &:hover
     cursor: pointer
     color: darken(red, 10%)
+
+.deleteIcon 
+  display: flex
+  justify-content: flex-end
+
+  i
+    cursor: pointer
+    transition: all .3s ease
+
+    &:hover
+      color: silver
+
+.materialInput
+  width: 400px!important
+
+.materialTable
+  width: 400px!important
