--- a/admin-panel/src/components/common/Notification/notification.module.sass
+++ b/admin-panel/src/components/common/Notification/notification.module.sass
@@ -27,3 +27,20 @@
 
   to
     margin-right: 0
+
+.line
+  position: absolute
+  bottom: 10px
+  height: 5px
+  right: 0
+  width: 100%
+  background: white
+  animation-duration: 2s
+  animation-name: decreaseWidth
+
+@keyframes decreaseWidth
+  from
+    width: 100%
+
+  to
+    width: 0
