--- a/admin-panel/src/components/app/app.module.sass
+++ b/admin-panel/src/components/app/app.module.sass
@@ -1,8 +1,10 @@
 .main
   display: flex
-  width: 300px
-  
-.sidebar 
+
+.wrapper
+  margin: 20px  
+
+.sidebar
   background: black
   padding: 0 50px
   min-height: 100vh
@@ -15,7 +17,7 @@
   a
     color: white
     font-size: 18px
-  
+
 .logout
   position: absolute
   right: 30px
