--- a/admin-panel/src/index.css
+++ b/admin-panel/src/index.css
@@ -15,6 +15,10 @@ button:disabled {
   opacity: 0.5;
 }
 
+.ui[class*="left floated"].buttons {
+  float: none;
+}
+
 .ReactModal__Overlay {
   opacity: 0;
   transform: translateY(-50px);
