add build pipeline

--- a/admin-panel/src/pages/app/app.module.sass
+++ b/admin-panel/src/pages/app/app.module.sass
@@ -16,7 +16,11 @@
 
   a
     color: white
-    font-size: 18px
+    font-size: 16px
+    text-transform: uppercase
+    &:hover
+      color: red
+      
 
 .logout
   position: absolute
@@ -29,3 +33,6 @@
   &:hover
     color: #666
     cursor: pointer
+
+.activeLink
+  color: red!important  
