--- a/static/sass/main.sass
+++ b/static/sass/main.sass
@@ -289,14 +289,14 @@ select#filter-by-author
 /** Loader ***/
 .lds-ring
   display: inline-block
-  position: absolute
+  position: fixed
   width: 64px
   height: 64px
   z-index: 100
   right: 0
   left: 0
   margin: auto
-  top: 20px
+  top: 50%
   display: none
 
   & div
