--- a/views/aphorisms.hbs
+++ b/views/aphorisms.hbs
@@ -107,7 +107,7 @@
     </div>
 
     <div class="more-button-wrapper">
-      <input type="button" class="button more-button-aphorism" value="Показать еще 100"></input>
+      <input type="button" class="button more-button-aphorism" value="Показать все"></input>
     </div>
     <!-- end wrapper -->
   </div>
