--- a/views/aphorisms.hbs
+++ b/views/aphorisms.hbs
@@ -54,11 +54,11 @@
             <div class="aphorisms-icons">
 
               <div class="share-buttons">
-                <i onclick="Share.vkontakte('http://spiritual-evolution.ru/aphorism/{{this.id}}','Хороший Афоризм')"
+                <i onclick="Share.vkontakte('http://spiritual-evolution.ru/aphorism/{{this._id}}','Хороший Афоризм')"
                   class="fa fa-vk" aria-hidden="true"></i>
-                <i onclick="Share.whatsapp('http://spiritual-evolution.ru/aphorism/{{this.id}}','Хороший Афоризм')"
+                <i onclick="Share.whatsapp('http://spiritual-evolution.ru/aphorism/{{this._id}}','Хороший Афоризм')"
                   class="fa fa-whatsapp" aria-hidden="true"></i>
-                <i onclick="Share.telegram('http://spiritual-evolution.ru/aphorism/{{this.id}}','Хороший Афоризм')"
+                <i onclick="Share.telegram('http://spiritual-evolution.ru/aphorism/{{this._id}}','Хороший Афоризм')"
                   class="fa fa-telegram" aria-hidden="true"></i>
               </div>
 
