--- a/views/dynamicMaterial.hbs
+++ b/views/dynamicMaterial.hbs
@@ -25,20 +25,20 @@
           <div class="aphorisms-item-bottom">
 
             <div class="left-links">
-              {{#if material.website_url}}
-              <a class="aphorisms-item-websiteurl" target="_blank" href="{{material.website_url}}">Сайт</a>
+              {{#if material.websiteUrl}}
+              <a class="aphorisms-item-websiteurl" target="_blank" href="{{material.websiteUrl}}">Сайт</a>
               {{/if}}
 
-              {{#if material.audio_books}}
-              <a class="aphorisms-item-audiobooks" target="_blank" href="{{material.audio_books}}">Аудиокниги</a>
+              {{#if material.audiobooks}}
+              <a class="aphorisms-item-audiobooks" target="_blank" href="{{material.audiobooks}}">Аудиокниги</a>
               {{/if}}
 
               {{#if material.books}}
               <a class="aphorisms-item-books" target="_blank" href="{{material.books}}">Книги</a>
               {{/if}}
 
-              {{#if material.youtube_url}}
-              <a class="aphorisms-item-youtubeurl" target="_blank" href="{{material.youtube_url}}">
+              {{#if material.youtubeUrl}}
+              <a class="aphorisms-item-youtubeurl" target="_blank" href="{{material.youtubeUrl}}">
                 <i id="fa-share" class="fa fa-youtube" aria-hidden="true"></i>
               </a>
               {{/if}}
