--- a/views/materials.hbs
+++ b/views/materials.hbs
@@ -48,8 +48,8 @@
           <div class="aphorisms-item-bottom">
 
             <div class="left-links">
-              {{#if this.website_url}}
-              <a class="aphorisms-item-websiteurl" target="_blank" href="{{this.website_url}}">Сайт</a>
+              {{#if this.websiteUrl}}
+              <a class="aphorisms-item-websiteurl" target="_blank" href="{{this.websiteUrl}}">Сайт</a>
               {{/if}}
 
               {{#if this.audiobooks}}
@@ -60,8 +60,8 @@
               <a class="aphorisms-item-books" target="_blank" href="{{this.books}}">Книги</a>
               {{/if}}
 
-              {{#if this.youtube_url}}
-              <a class="aphorisms-item-youtubeurl" target="_blank" href="{{this.youtube_url}}">
+              {{#if this.youtubeUrl}}
+              <a class="aphorisms-item-youtubeurl" target="_blank" href="{{this.youtubeUrl}}">
                 <i id="fa-share" class="fa fa-youtube" aria-hidden="true"></i>
               </a>
               {{/if}}
