--- a/views/index.hbs
+++ b/views/index.hbs
@@ -23,19 +23,7 @@
         {{#if mainPage.headerText}}
         {{mainPage.headerText}}
         {{else}}
-        Если ты жаждешь глубинной трансформации, этот ресурс поможет тебе. Раз ты здесь, значит,
-        готов к переменам и
-        открыт для нового.
-        Рост счастья и состояние наполненности от простого бытия меняет даже мрачную реальность. Сама возможность Быть
-        уже является большим чудом и счастьем. Постигшему эту истину раскрывается мир неограниченных возможностей.
-        Хоть на секунду притормози и пристально посмотри на того, кто задыхается в серой реальности, кто не находит
-        себя
-        в этом мире. Может, это вовсе не ты? Давай вместе попробуем заглянуть внутрь измученной оболочки, стать ближе
-        к
-        лучшей версии тебя.
-        В каждом разделе мы собираем то, что способно изменить любого, кто к этому стремится. Дать ответ на нужный
-        вопрос, заставить задуматься или просто вдохновить на новый день.
-        Читай, размышляй и используй то, что тебе подойдет. Удачи!
+        Если ты жаждешь глубинной трансформации, этот ресурс поможет тебе. Все что тебе нужно это ежедневно заходить на ресурс и читать афоризмы в течении хотя бы пяти минут. Будут происходить микро-озарения что поведет к транформации личности, посещению более светлых мыслей. А как известно что мыслим то чувствуем, что чувствует то и проживаем. Читай, размышляй и используй то, что тебе подойдет. Удачи!
         {{/if}}
       </p>
     </div>
