--- a/views/aphorisms.hbs
+++ b/views/aphorisms.hbs
@@ -15,13 +15,7 @@
 
     <div class="header-text">
       <p>
-        Если ты жаждешь глубинной трансформации, этот ресурс поможет тебе. Раз ты здесь, значит,
-        готов к переменам и
-        открыт для нового.
-        Рост счастья и состояние наполненности от простого бытия меняет даже мрачную реальность. Сама возможность Быть
-        уже является большим чудом и счастьем. Постигшему эту истину раскрывается мир неограниченных возможностей.
-        В каждом разделе мы собираем то, что способно изменить любого, кто к этому стремится.
-        Читай, размышляй и используй то, что тебе подойдет. Удачи!
+        Если ты жаждешь глубинной трансформации, этот ресурс поможет тебе. Все что тебе нужно это ежедневно заходить на ресурс и читать афоризмы в течении хотя бы пяти минут. Будут происходить микро-озарения что поведет к транформации личности, посещению более светлых мыслей. А как известно что мыслим то чувствуем, что чувствует то и проживаем. Читай, размышляй и используй то, что тебе подойдет. Удачи!
       </p>
     </div>
 
