change cron time

--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -30,3 +30,12 @@
   </div>
 
 </div>
+
+{{!-- <div class="contacts">
+  <a href="https://vk.com/medonomator">
+    <i class="fa fa-vk" aria-hidden="true"></i>
+  </a>
+  <a href="tg://medonomator">
+    <i class="fa fa-telegram" aria-hidden="true"></i>
+  </a>
+</div> --}}
