--- a/static/sass/main.sass
+++ b/static/sass/main.sass
@@ -385,6 +385,7 @@ select#filter-by-author
         font-size: 14px
         text-transform: uppercase
         font-weight: 600
+        margin-top: 23px
         &:hover
           color: #333
           background: #dada35
@@ -493,14 +494,16 @@ select#filter-by-author
 // contacts
 .contacts
   display: flex
-  flex-direction: column
+  flex-direction: row
+  justify-content: flex-end
   padding-top: 20px
   padding-left: 20px
   padding-bottom: 20px
   a
     color: white
-    font-size: 20px
+    font-size: 24px
     transition: all .3s ease
+    margin-right: 43px
     &:hover
       color: darken(white, 20%)
 
