--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -11,8 +11,16 @@
 
     </div>
 
+    <div class="contacts">
+      <a href="https://vk.com/public167289683">
+        <i class="fa fa-vk" aria-hidden="true"></i>
+      </a>
+      <a href="https://t.me/bestaphorism">
+        <i class="fa fa-telegram" aria-hidden="true"></i>
+      </a>
+    </div>
+
     <div class="footer-end-block">
-      {{!-- <a href="/development-plan">План развития проекта</a>  --}}
       <a class="support-project" href="/contacts">Поддержать проект</a>
     </div>
   </div>
