--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -19,7 +19,6 @@
     <ul>
       <li><a href="/">Главная</a></li>
       <li><a href="/materials">Материалы</a></li>
-      {{!-- <li><a href="/courses">Бесплатные курсы</a></li> --}}
       <li><a href="/contacts">Контакты</a></li>
     </ul>
   </div>
@@ -31,11 +30,11 @@
 
 </div>
 
-{{!-- <div class="contacts">
-  <a href="https://vk.com/medonomator">
+<div class="contacts">
+  <a href="https://vk.com/public167289683">
     <i class="fa fa-vk" aria-hidden="true"></i>
   </a>
-  <a href="tg://medonomator">
+  <a href="https://t.me/bestaphorism">
     <i class="fa fa-telegram" aria-hidden="true"></i>
   </a>
-</div> --}}
+</div>
